feat: add s3 and modified apis
